// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-tag Renders \`create-tag\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Create a tag
      </span>
    </div>
    <div
      class="text"
    >
      <tag-form-stub
        form="[object Object]"
        maxtagnamelength="20"
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-tag Renders \`create-tag\` with tag 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        create-tag title
      </span>
    </div>
    <div
      class="text"
    >
      <tag-form-stub
        form="[object Object]"
        maxtagnamelength="20"
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;
